Refactored toggle switch.

--- a/spring-batch-docs/asciidoc/domain.adoc
+++ b/spring-batch-docs/asciidoc/domain.adoc
@@ -6,51 +6,7 @@
 
 == The Domain Language of Batch
 
-ifdef::backend-html5[]
-+++
-<script src="./jsfiles/jquery.js"></script>
-<script src="./jsfiles/underscore.js"></script>
-<script src="./jsfiles/backbone.js"></script>
-<script src="./jsfiles/js.cookie.js"></script>
-<script src="./jsfiles/projectDocumentationWidget.js"></script>
-<script src="./jsfiles/application.js"></script>
-<script>
-    var apiBaseUrl = "https://spring.io",
-        projectId = "spring-batch",
-        siteBaseUrl = "/spring-batch";
-</script>
-<div code-widget-controls="" style="display: inline-block">
-<div class="item-slider-widget js-item-slider--wrapper">
-        <div class="item-slider--container">
-            <div class="item--slider js-item--slider"
-                 style="width: 57px; margin-left: 0.01555px;"></div>
-            <div class="item js-item" data-snippet-type="java">
-                Java
-            </div>
-            <div class="item js-item" data-snippet-type="xml">
-                XML
-            </div>
-        </div>
-    </div>
-</div>
-<div class="code-widget--body">
-    <div class="js-code-maven-widget"></div>
-</div>
-<script type="text/html" id="code-widget-controls-template">
-    <div class="item-slider-widget js-item-slider--wrapper">
-        <div class="item-slider--container">
-            <div class="item--slider js-item--slider"></div>
-            <div id="java_snip_item" class="item js-item" data-snippet-type='java'>
-                Java
-            </div>
-            <div id="xml_snip_item" class="item js-item" data-snippet-type='xml'>
-                XML
-            </div>
-        </div>
-    </div>
-</script>
-+++
-endif::backend-html5[]
+include::toggle.adoc[]
 
 To any experienced batch architect, the overall concepts of batch
 processing used in Spring Batch should be familiar and comfortable. There
@@ -109,19 +65,34 @@ The job configuration contains:
 * Definition and ordering of Steps
 * Whether or not the job is restartable
 
+ifdef::backend-html5[]
+[role="javaContent"]
 A default simple implementation of the Job
 interface is provided by Spring Batch in the form of the
 `SimpleJob` class which creates some standard
-functionality on top of `Job`, however the batch
-namespace abstracts away the need to instantiate it directly. Instead, the
-`<job>` tag can be used:
+functionality on top of `Job`.  When using java based configuration, a collection of
+builders are made available for the instantiation of a `Job`:
 
-ifdef::backend-html5[]
-+++
-   <div id="xml_seg_1">
-   <div id="xml_section_1">
-+++
-[source, xml]
+[source, java, role="javaContent"]
+----
+@Bean
+public Job footballJob() {
+    return this.jobBuilderFactory.get("footballJob")
+                     .start(playerLoad())
+                     .next(gameLoad())
+                     .next(playerSummarization())
+                     .end()
+                     .build();
+}
+----
+
+[role="xmlContent"]
+A default simple implementation of the `Job` interface is provided by Spring Batch in the
+form of the `SimpleJob` class which creates some standard functionality on top of `Job`,
+however the batch namespace abstracts away the need to instantiate it directly.
+Instead, the `<job>` tag can be used:
+
+[source, xml, role="xmlContent"]
 ----
 <job id="footballJob">
     <step id="playerload" next="gameLoad"/>
@@ -129,27 +100,33 @@ ifdef::backend-html5[]
     <step id="playerSummarization"/>
 </job>
 ----
-
-+++
-</div>
-</div>
-<div id="java_seg_1" style="display: none;">
-<div id="java_section_1">
-+++
-[source, java]
-----
-System.out.println("Hello World");
-----
-+++
-</div>
-</div>
-+++
 endif::backend-html5[]
 
 ifdef::backend-pdf[]
+A default simple implementation of the Job
+interface is provided by Spring Batch in the form of the
+`SimpleJob` class which creates some standard
+functionality on top of `Job`.  When using java based configuration, a collection of
+builders are made available for the instantiation of a `Job`:
 
-XML FUN
-[source, xml]
+[source, java, role="javaContent"]
+----
+@Bean
+public Job footballJob() {
+    return this.jobBuilderFactory.get("footballJob")
+                     .start(playerLoad())
+                     .next(gameLoad())
+                     .next(playerSummarization())
+                     .end()
+                     .build();
+}
+----
+
+[role="xmlContent"]
+However, when using XML configuration, the batch namespace abstracts away the need to
+instantiate it directly. Instead, the `<job>` tag can be used:
+
+[source, xml, role="xmlContent"]
 ----
 <job id="footballJob">
     <step id="playerload" next="gameLoad"/>
@@ -157,14 +134,6 @@ XML FUN
     <step id="playerSummarization"/>
 </job>
 ----
-
-JAVA CONFIGURATION
-
-[source, java]
-----
-System.out.println("Hello World");
-----
-
 endif::backend-pdf[]
 
 ==== JobInstance
@@ -695,12 +664,20 @@ Job is first launched, a
 `JobExecution` is obtained from the repository, and
 during the course of execution `StepExecution` and
 `JobExecution` implementations are persisted by
-passing them to the repository:
+passing them to the repository.
 
-[source, xml]
+[role="xmlContent"]
+The batch namespace provides support for configuring a `JobRepository` instance simply via
+the `<job-repository>` tag:
+
+[source, xml, role="xmlContent"]
 ----
 <job-repository id="jobRepository"/>
 ----
+
+[role="javaContent"]
+When using java configuration, `@EnableBatchProcessing` annotation provides a
+`JobRepository` as one of the components automatically configured out of the box.
 
 === JobLauncher
 
@@ -753,6 +730,7 @@ not be written out. More details about the `ItemProcessor` interface can be
 found in <<readersAndWriters.adoc#readersAndWriters,Readers And Writers>>.
 
 
+[role="xmlContent"]
 === Batch Namespace
 
 Many of the domain concepts listed above need to be configured in a
@@ -761,12 +739,7 @@ implementations of the interfaces above that can be used in a standard
 bean definition, a namespace has been provided for ease of
 configuration:
 
-ifdef::backend-html5[]
-+++
-<div id="xml_seg_2">
-<div id="xml_section_2">
-+++
-[source, xml]
+[source, xml, role="xmlContent"]
 ----
 <beans:beans xmlns="http://www.springframework.org/schema/batch"
 xmlns:beans="http://www.springframework.org/schema/beans"
@@ -775,64 +748,20 @@ xsi:schemaLocation="
    http://www.springframework.org/schema/beans
    http://www.springframework.org/schema/beans/spring-beans.xsd
    http://www.springframework.org/schema/batch
-   http://www.springframework.org/schema/batch/spring-batch-2.2.xsd">
+   http://www.springframework.org/schema/batch/spring-batch.xsd">
 
 <job id="ioSampleJob">
-<step id="step1">
-    <tasklet>
-        <chunk reader="itemReader" writer="itemWriter" commit-interval="2"/>
-    </tasklet>
-</step>
-</job>
-
-</beans:beans>
-----
-+++
-</div>
-</div>
-<div id="java_seg_2" style="display: none;">
-<div id="java_section_2">
-+++
-[source, java]
-----
-System.out.println("Hello World");
-----
-+++
-</div>
-</div>
-+++
-endif::backend-html5[]
-
-ifdef::backend-pdf[]
-XML
-[source, xml]
-----
-<beans:beans xmlns="http://www.springframework.org/schema/batch"
-xmlns:beans="http://www.springframework.org/schema/beans"
-xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-xsi:schemaLocation="
-   http://www.springframework.org/schema/beans
-   http://www.springframework.org/schema/beans/spring-beans.xsd
-   http://www.springframework.org/schema/batch
-   http://www.springframework.org/schema/batch/spring-batch-2.2.xsd">
-
-<job id="ioSampleJob">
-<step id="step1">
-    <tasklet>
-        <chunk reader="itemReader" writer="itemWriter" commit-interval="2"/>
-    </tasklet>
-</step>
+    <step id="step1">
+        <tasklet>
+            <chunk reader="itemReader" writer="itemWriter" commit-interval="2"/>
+        </tasklet>
+    </step>
 </job>
 
 </beans:beans>
 ----
 
-JAVA CONFIGURATION
-[source, java]
-----
-System.out.println("Hello World");
-----
-endif::backend-pdf[]
+[role="xmlContent"]
 As long as the batch namespace has been declared, any of its
 elements can be used. More information on configuring a
 Job can be found in <<job.adoc#configureJob,Configuring and Running a Job>>. More information on configuring a `Step` can be
