I added my name
I added my name to the author list.

--- a/spring-batch-docs/asciidoc/header/index-header.adoc
+++ b/spring-batch-docs/asciidoc/header/index-header.adoc
@@ -1,6 +1,6 @@
 = Spring Batch - Reference Documentation
 
-Lucas Ward, Dave Syer, Thomas Risberg, Robert Kasanicky, Dan Garrette, Wayne Lund, Michael Minella, Chris Schaefer, Gunnar Hillert, Glenn Renfro
+Lucas Ward, Dave Syer, Thomas Risberg, Robert Kasanicky, Dan Garrette, Wayne Lund, Michael Minella, Chris Schaefer, Gunnar Hillert, Glenn Renfro, Jay Bryant
 
 :batch-asciidoc: http://docs.spring.io/spring-batch/reference/html/
 
