--- a/spring-batch-docs/asciidoc/whatsnew.adoc
+++ b/spring-batch-docs/asciidoc/whatsnew.adoc
@@ -12,7 +12,7 @@ The Spring Batch 4.0 release has three major themes:
 * Java 8 Requirement
 
 
-* Dependencies re-baseline
+* Dependencies Re-baseline
 
 
 * Builders for ItemReaders and ItemWriters
@@ -23,30 +23,30 @@ The Spring Batch 4.0 release has three major themes:
 === Java 8 Requirement
 
 Spring Batch has historically followed Spring Framework's baselines for both
-		java version as well as third party dependencies.  With Spring Batch 4, the Spring
-		Framework version is being upgraded to Spring Framework 5.  As such, the java
+		java version and third party dependencies.  With Spring Batch 4, the Spring
+		Framework version is being upgraded to Spring Framework 5.  As a result, the Java
 		version requirement for Spring Batch is also increasing to Java 8.  This should be
-		mainly an internal change in that most of the framework has supported things like
+		mainly an internal change, in that most of the framework has supported things like
 		functional interfaces and lambdas since they were released.
-	
+
 
 [[whatsNewDependencies]]
 
 
-=== Dependencies re-baseline
+=== Dependencies Re-baseline
 
 In order to continue to integrate with supported versions of the third party
-		libraries Spring Batch utilizes, Spring Batch 4 is updating the dependencies across
-		the board.  The new dependency versions are in alignment with Spring Framework 5.
-	
+		libraries Spring Batch uses, Spring Batch 4 is updating the dependencies across
+		the board.  The new dependency versions align with Spring Framework 5.
+
 
 [[whatsNewBuilders]]
 
 
 === Provide builders for the ItemReaders, ItemProcessors, and ItemWriters
 
-Spring Batch 4 is providing a collection of builders for all of the ItemReaders
-		and ItemWriters that come with the framework.  As of this release, builders for the
+Spring Batch 4 is providing a collection of builders for all of the `ItemReader` implementations
+		and `ItemWriter` implementations that come with the framework.  As of this release, builders for the
 		following components (as well as some related utility builders) are available:
 
 		* `AmqpItemReader` - `AmqpItemReaderBuilder`
@@ -77,5 +77,3 @@ Spring Batch 4 is providing a collection of builders for all of the ItemReaders
 		* `StaxEventItemReader` - `StaxEventItemReaderBuilder`
 		* `StaxEventItemWriter` - `StaxEventItemWriterBuilder`
 		* `SynchronizedItemStreamReader` - `SynchronizedItemStreamReaderBuilder`
-
-
