--- a/spring-batch-docs/asciidoc/step.adoc
+++ b/spring-batch-docs/asciidoc/step.adoc
@@ -653,7 +653,7 @@ Transaction attributes can be used to control the `isolation`,
 The step has to take care of `ItemStream`
       callbacks at the necessary points in its lifecycle. (For more
       information on the `ItemStream` interface,
-      see <<readersAndWriters.adoc#itemStream,itemStream>>) This is vital if a step fails
+      see <<readersAndWriters.adoc#itemStream,ItemStream>>) This is vital if a step fails
       and might need to be restarted, because the
       `ItemStream` interface is where the step gets the
       information it needs about persistent state between executions.
